# Quarto_Dashboard_Bertopic_Profiap

./: 01_train_bertopic_granite.py  01_train_bertopic_paraphrase.py  02_eval_granite.py  02_eval_octis.py  02_eval_paraphrase.py  README.md  pyproject.toml
notebooks/: 00_exploration.ipynb  01_metrics_and_images.ipynb  _publish.yml  barchart_profiap.html  dashboard.html  dashboard.qmd  datamap_profiap.html  references.bib  topic_info.csv  topics_over_time.html
notebooks/dashboard_files/libs/bootstrap/: bootstrap-dark-8cdc23add56cd67de6ad6da639645a3b.min.css
